Image Builder Improvements (#500)
- refactor pyfunc base image

<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->

**What this PR does / why we need it**:
<!-- Explain here the context and why you're making the change. What is
the problem you're trying to solve. --->

Image building is a mandatory process in the deployment of PyFunc-based
Merlin components. The process abstracts the complexity of building and
publishing a ready-to-be-used Docker image that contains the user's
model source code, artifacts, and dependencies. However, there are some
issues with the current image-building approach that lead to poor
development experience and inefficient resource utilization. This PR
addresses them by:

1. Refactoring Kaniko job specification generated by Merlin so that:
a. it is more configurable -- we can set Kaniko's build arguments flags
in the config and they will be propagated to the kaniko job spec
   b. it supports caching
2. Merlin API now generates a separate user's model dependencies files
and upload it to GCS. This dependencies then will be installed
separately during the image building (cause we use new Dockerfile)
a. To achieve it, we introduce a new gsutil package to interface with
GCS
3. Refactor base and application Dockerfiles used to build Docker images
for pyfunc-server and batch prediction jobs
a. Previously, the base Dockerfile had a step to install the
pyfunc-server or batch prediction jobs dependencies. This step is now
executed by the application Dockerfile
i. Subsequently, this allows us to have only one base image instead of
building base images for each Python version.
b. New base Dockerfile will only install the platform components such as
conda, spark, grpc library, but not the component itself
c.

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -10,6 +10,7 @@ on:
 env:
   ARTIFACT_RETENTION_DAYS: 7
   DOCKER_BUILDKIT: 1
+  DOCKER_REGISTRY: ghcr.io
   GO_VERSION: "1.20"
 
 jobs:
@@ -238,8 +239,9 @@ jobs:
         ports:
           - 5432:5432
     needs:
-      - build-ui
       - create-version
+      - build-ui
+      - test-api
     steps:
       - uses: actions/checkout@v2
       - name: Download UI Dist
@@ -258,46 +260,45 @@ jobs:
           path: merlin.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
-  build-batch-predictor:
+  build-batch-predictor-base:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["38", "39", "310"]
     needs:
       - create-version
+      - test-batch-predictor
+    env:
+      DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyspark-base:${{ needs.create-version.outputs.version }}"
     steps:
       - uses: actions/checkout@v2
-      - name: Build Batch Predictor Docker py${{ matrix.python-version }}
-        run: docker build -t merlin-pyspark-base-py${{ matrix.python-version }}:${{ needs.create-version.outputs.version }} --build-arg PYTHON_VERSION=${{ matrix.python-version }} -f python/batch-predictor/docker/base.Dockerfile python
-      - name: Save Batch Predictor Docker
-        run: docker image save --output merlin-pyspark-base-py${{ matrix.python-version }}.${{ needs.create-version.outputs.version }}.tar merlin-pyspark-base-py${{ matrix.python-version }}:${{ needs.create-version.outputs.version }}
-      - name: Publish Batch Predictor Docker Artifact
+      - name: Build Batch Predictor Base Docker
+        run: docker build -t ${{ env.DOCKER_IMAGE_TAG }} -f python/batch-predictor/docker/base.Dockerfile python
+      - name: Save Batch Predictor Base Docker
+        run: docker image save --output merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar ${{ env.DOCKER_IMAGE_TAG }}
+      - name: Publish Batch Predictor Base Docker Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-pyspark-base-py${{ matrix.python-version }}.${{ needs.create-version.outputs.version }}.tar
-          path: merlin-pyspark-base-py${{ matrix.python-version }}.${{ needs.create-version.outputs.version }}.tar
+          name: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
-  build-pyfunc-server:
+  build-pyfunc-server-base:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["38", "39", "310"]
     needs:
       - create-version
+      - test-pyfunc-server
+    env:
+      DOCKER_REGISTRY: ghcr.io
+      DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyfunc-base:${{ needs.create-version.outputs.version }}"
     steps:
       - uses: actions/checkout@v2
-      - name: Build Pyfunc Server Docker py${{ matrix.python-version }}
-        run: docker build -t merlin-pyfunc-base-py${{ matrix.python-version }}:${{ needs.create-version.outputs.version }} --build-arg PYTHON_VERSION=${{ matrix.python-version }} -f python/pyfunc-server/docker/base.Dockerfile python
-      - name: Save Pyfunc Server Docker py${{ matrix.python-version }}
-        run: docker image save --output merlin-pyfunc-base-py${{ matrix.python-version }}.${{ needs.create-version.outputs.version }}.tar merlin-pyfunc-base-py${{ matrix.python-version }}:${{ needs.create-version.outputs.version }}
-      - name: Publish Pyfunc Server Docker Artifact py${{ matrix.python-version }}
+      - name: Build Pyfunc Server Base Docker
+        run: docker build -t ${{ env.DOCKER_IMAGE_TAG }} -f python/pyfunc-server/docker/base.Dockerfile python
+      - name: Save Pyfunc Server Base Docker
+        run: docker image save --output merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar ${{ env.DOCKER_IMAGE_TAG }}
+      - name: Publish Pyfunc Server Base Docker Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-pyfunc-base-py${{ matrix.python-version }}.${{ needs.create-version.outputs.version }}.tar
-          path: merlin-pyfunc-base-py${{ matrix.python-version }}.${{ needs.create-version.outputs.version }}.tar
+          name: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-transformer:
@@ -439,11 +440,11 @@ jobs:
     uses: ./.github/workflows/release.yml
     needs:
       - create-version
-      - e2e-test
-      - test-api
+      - build-api
+      - build-batch-predictor-base
+      - build-pyfunc-server-base
       - test-python-sdk
-      - test-pyfunc-server
-      - test-batch-predictor
+      - e2e-test
     with:
       version: ${{ needs.create-version.outputs.version }}
     secrets:
