--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,58 +100,6 @@ jobs:
           docker tag merlin-transformer:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
 
-  publish-batch-predictor:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["38", "39", "310"]
-    steps:
-      - name: Log in to the Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.DOCKER_REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Download API Docker Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: merlin-pyspark-base-py${{ matrix.python-version }}.${{ inputs.version }}.tar
-      - name: Retag and Push Docker Image
-        env:
-          CONTAINER_REGISTRY: ${{ env.DOCKER_REGISTRY }}/${{ github.repository }}
-        run: |
-          IMAGE_TAG="${{ env.CONTAINER_REGISTRY }}/merlin-pyspark-base-py${{ matrix.python-version }}:${{ inputs.version }}"
-          docker image load --input merlin-pyspark-base-py${{ matrix.python-version }}.${{ inputs.version }}.tar
-          docker tag merlin-pyspark-base-py${{ matrix.python-version }}:${{ inputs.version }} ${IMAGE_TAG}
-          docker push ${IMAGE_TAG}
-
-  publish-pyfunc:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["38", "39", "310"]
-    steps:
-      - name: Log in to the Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.DOCKER_REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Download API Docker Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: merlin-pyfunc-base-py${{ matrix.python-version }}.${{ inputs.version }}.tar
-      - name: Retag and Push Docker Image
-        env:
-          CONTAINER_REGISTRY: ${{ env.DOCKER_REGISTRY }}/${{ github.repository }}
-        run: |
-          IMAGE_TAG="${{ env.CONTAINER_REGISTRY }}/merlin-pyfunc-base-py${{ matrix.python-version }}:${{ inputs.version }}"
-          docker image load --input merlin-pyfunc-base-py${{ matrix.python-version }}.${{ inputs.version }}.tar
-          docker tag merlin-pyfunc-base-py${{ matrix.python-version }}:${{ inputs.version }} ${IMAGE_TAG}
-          docker push ${IMAGE_TAG}
-
   publish-inference-logger:
     runs-on: ubuntu-latest
     permissions:
@@ -168,3 +116,43 @@ jobs:
           docker image load --input merlin-logger.${{ inputs.version }}.tar
           docker tag merlin-logger:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
+
+  publish-batch-predictor:
+    runs-on: ubuntu-latest
+    env:
+      DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyspark-base:${{ inputs.version }}"
+    steps:
+      - name: Log in to the Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.DOCKER_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Download Batch Predictor Base Docker Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: merlin-pyspark-base.${{ inputs.version }}.tar
+      - name: Retag and Push Docker Image
+        run: |
+          docker image load --input merlin-pyspark-base.${{ inputs.version }}.tar
+          docker push ${{ env.DOCKER_IMAGE_TAG }}
+
+  publish-pyfunc:
+    runs-on: ubuntu-latest
+    env:
+      DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyfunc-base:${{ inputs.version }}"
+    steps:
+      - name: Log in to the Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.DOCKER_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Download Pyfunc Server Base Docker Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: merlin-pyfunc-base.${{ inputs.version }}.tar
+      - name: Retag and Push Docker Image
+        run: |
+          docker image load --input merlin-pyfunc-base.${{ inputs.version }}.tar
+          docker push ${{ env.DOCKER_IMAGE_TAG }}
