Uninstall merlin-sdk

--- a/python/pyfunc-server/docker/Dockerfile
+++ b/python/pyfunc-server/docker/Dockerfile
@@ -32,6 +32,7 @@ COPY sdk /sdk
 ENV SDK_PATH=/sdk
 
 WORKDIR /pyfunc-server
+RUN /bin/bash -c ". activate merlin-model && pip uninstall merlin-sdk || true"
 RUN /bin/bash -c ". activate merlin-model && pip install -r /pyfunc-server/requirements.txt"
 
 # Download and dry-run user model artifacts and code
