feat: update observation publisher to use newer sdk

--- a/python/observation-publisher/Dockerfile
+++ b/python/observation-publisher/Dockerfile
@@ -1,14 +1,12 @@
 FROM python:3.10
 
 WORKDIR /mlobs
-
+COPY sdk ./sdk
+WORKDIR /mlobs/observation-publisher
 COPY observation-publisher/requirements.txt .
-COPY sdk/ ./sdk
-ENV SDK_PATH=/mlobs/sdk
 RUN pip install -r requirements.txt
 RUN rm requirements.txt
-RUN rm -rf sdk
-COPY observation-publisher/conf/ ./conf
-COPY observation-publisher/publisher/ ./publisher
-
+WORKDIR /mlobs
+COPY observation-publisher ./observation-publisher
+WORKDIR /mlobs/observation-publisher
 ENTRYPOINT ["python", "-m", "publisher"]
