--- a/python/observation-publisher/Makefile
+++ b/python/observation-publisher/Makefile
@@ -1,9 +1,23 @@
 ENVIRONMENT_CONFIG = "example-override"
+VERSION=$(shell git describe --tags --always --first-parent)
+ifeq ($(strip $(VERSION)),)
+VERSION=0.1.0
+endif
 
 .PHONY: setup
 setup:
 	@echo "Setting up environment..."
 	@pip install -r requirements.txt --use-pep517
+
+.PHONY: setup-dev
+setup-dev:
+	@echo "Setting up environment..."
+	@pip install -r requirements-dev.txt
+
+.PHONY: pip-compile
+pip-compile:
+	@echo "Compiling requirements..."
+	@python -m piptools compile
 
 .PHONY: test
 test:
@@ -13,4 +27,4 @@ test:
 .PHONY: run
 run:
 	@echo "Running observation publisher..."
-	@python -m observation_publisher +environment=${ENVIRONMENT_CONFIG}
+	@python -m publisher +environment=${ENVIRONMENT_CONFIG}
