--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -186,6 +186,29 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: make it-test-api-ci
 
+
+  test-observability-publisher:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        id: setup-python
+        with:
+          python-version: '3.10'
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ steps.setup-python-outputs.python-version }}-
+      - name: Install dependencies
+        working-directory: ./python/observation-publisher
+        run: |
+          make setup
+      - name: Unit test observation publisher
+        working-directory: ./python/observation-publisher
+        run: make test
+
   build-ui:
     runs-on: ubuntu-latest
     steps:
