--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -156,3 +156,23 @@ jobs:
         run: |
           docker image load --input merlin-pyfunc-base.${{ inputs.version }}.tar
           docker push ${{ env.DOCKER_IMAGE_TAG }}
+
+  publish-observation-publisher:
+    runs-on: ubuntu-latest
+    env:
+      DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-observation-publisher:${{ inputs.version }}"
+    steps:
+      - name: Log in to the Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.DOCKER_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Download Observation Publisher Docker Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: merlin-observation-publisher.${{ inputs.version }}.tar
+      - name: Retag and Push Docker Image
+        run: |
+          docker image load --input merlin-observation-publisher.${{ inputs.version }}.tar
+          docker push ${{ env.DOCKER_IMAGE_TAG }}
