feat: update observation publisher to use newer sdk (#509)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->

**What this PR does / why we need it**:
<!-- Explain here the context and why you're making the change. What is
the problem you're trying to solve. --->
This is a follow up to https://github.com/caraml-dev/merlin/pull/504 ,
which update the observation publisher to use the latest Merlin SDK.
Also introduce the use of piptools to pin the dependencies.

Another important changes is using dict instead of the InferenceSchema
dataclass. This is because OmegaConf (and by extension, Hydra) does not
have a way to instantiate the correct subclass to an abstract class
field, so we have to perform our own deserialization instead.

**Which issue(s) this PR fixes**:
<!--
*Automatically closes linked issue when PR is merged.
Usage: `Fixes #<issue number>`, or `Fixes (paste link of issue)`.
-->

Fixes #

**Does this PR introduce a user-facing change?**:
<!--
If no, just write "NONE" in the release-note block below.
If yes, a release note is required. Enter your extended release note in
the block below.
If the PR requires additional action from users switching to the new
release, include the string "action required".

For more information about release notes, see kubernetes' guide here:
http://git.k8s.io/community/contributors/guide/release-notes.md
-->
NONE

```release-note
NONE
```

**Checklist**

- [x] Added unit test, integration, and/or e2e tests
- [x] Tested locally
- [x] Updated documentation
- [ ] Update Swagger spec if the PR introduce API changes
- [ ] Regenerated Golang and Python client if the PR introduce API
changes

--- a/python/observation-publisher/Makefile
+++ b/python/observation-publisher/Makefile
@@ -4,6 +4,12 @@ ENVIRONMENT_CONFIG = "example-override"
 setup:
 	@echo "Setting up environment..."
 	@pip install -r requirements.txt --use-pep517
+	@pip install -r requirements-dev.txt
+
+.PHONY: pip-compile
+pip-compile:
+	@echo "Compiling requirements..."
+	@python -m piptools compile
 
 .PHONY: test
 test:
@@ -13,4 +19,4 @@ test:
 .PHONY: run
 run:
 	@echo "Running observation publisher..."
-	@python -m observation_publisher +environment=${ENVIRONMENT_CONFIG}
+	@python -m publisher +environment=${ENVIRONMENT_CONFIG}
