--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -186,6 +186,29 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: make it-test-api-ci
 
+
+  test-observation-publisher:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        id: setup-python
+        with:
+          python-version: '3.10'
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ steps.setup-python-outputs.python-version }}-
+      - name: Install dependencies
+        working-directory: ./python/observation-publisher
+        run: |
+          make setup
+      - name: Unit test observation publisher
+        working-directory: ./python/observation-publisher
+        run: make test
+
   build-ui:
     runs-on: ubuntu-latest
     steps:
@@ -355,6 +378,30 @@ jobs:
           path: merlin-logger.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
+  build-observation-publisher:
+    runs-on: ubuntu-latest
+    needs:
+      - create-version
+      - test-observation-publisher
+    env:
+      DOCKER_REGISTRY: ghcr.io
+      DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-observation-publisher:${{ needs.create-version.outputs.version }}"
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build Observation Publisher Docker
+        env:
+          OBSERVATION_PUBLISHER_IMAGE_TAG: ${{ env.DOCKER_IMAGE_TAG }}
+        run: make observation-publisher
+        working-directory: ./python
+      - name: Save Observation Publisher Docker
+        run: docker image save --output merlin-observation-publisher.${{ needs.create-version.outputs.version }}.tar ${{ env.DOCKER_IMAGE_TAG }}
+      - name: Publish Observation Publisher Docker Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: merlin-observation-publisher.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-observation-publisher.${{ needs.create-version.outputs.version }}.tar
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+
   e2e-test:
     runs-on: ubuntu-latest
     needs:
@@ -443,6 +490,7 @@ jobs:
       - build-api
       - build-batch-predictor-base
       - build-pyfunc-server-base
+      - build-observation-publisher
       - test-python-sdk
       - e2e-test
     with:
