--- a/python/observation-publisher/requirements.in
+++ b/python/observation-publisher/requirements.in
@@ -3,4 +3,7 @@ caraml-upi-protos>=1.0.0
 arize==7.7.*
 hydra-core>=1.3.0
 pandas>=1.0.0
+google-cloud-bigquery
+prometheus-client >= 0.19.0
+typing-extensions==4.9.0
 -e file:../sdk
