--- a/python/observation-publisher/requirements.txt
+++ b/python/observation-publisher/requirements.txt
@@ -77,6 +77,7 @@ gitpython==3.1.40
     # via mlflow
 google-api-core==2.15.0
     # via
+    #   google-cloud-bigquery
     #   google-cloud-core
     #   google-cloud-storage
 google-auth==2.25.2
@@ -85,8 +86,12 @@ google-auth==2.25.2
     #   google-api-core
     #   google-cloud-core
     #   google-cloud-storage
+google-cloud-bigquery==3.14.1
+    # via -r requirements.in
 google-cloud-core==2.4.1
-    # via google-cloud-storage
+    # via
+    #   google-cloud-bigquery
+    #   google-cloud-storage
 google-cloud-storage==2.13.0
     # via merlin-sdk
 google-crc32c==1.5.0
@@ -94,7 +99,9 @@ google-crc32c==1.5.0
     #   google-cloud-storage
     #   google-resumable-media
 google-resumable-media==2.6.0
-    # via google-cloud-storage
+    # via
+    #   google-cloud-bigquery
+    #   google-cloud-storage
 googleapis-common-protos==1.62.0
     # via
     #   arize
@@ -153,6 +160,7 @@ omegaconf==2.3.0
 packaging==21.3
     # via
     #   docker
+    #   google-cloud-bigquery
     #   hydra-core
     #   marshmallow
     #   mlflow
@@ -162,7 +170,9 @@ pandas==1.5.3
     #   arize
     #   mlflow
 prometheus-client==0.19.0
-    # via prometheus-flask-exporter
+    # via
+    #   -r requirements.in
+    #   prometheus-flask-exporter
 prometheus-flask-exporter==0.23.0
     # via mlflow
 protobuf==4.25.1
@@ -193,6 +203,7 @@ python-dateutil==2.8.2
     # via
     #   arrow
     #   botocore
+    #   google-cloud-bigquery
     #   merlin-sdk
     #   pandas
 python-slugify==8.0.1
@@ -215,6 +226,7 @@ requests==2.31.0
     #   databricks-cli
     #   docker
     #   google-api-core
+    #   google-cloud-bigquery
     #   google-cloud-storage
     #   mlflow
     #   requests-futures
@@ -252,6 +264,7 @@ types-python-dateutil==2.8.19.14
     # via arrow
 typing-extensions==4.9.0
     # via
+    #   -r requirements.in
     #   alembic
     #   typing-inspect
 typing-inspect==0.9.0
