--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -402,6 +402,29 @@ jobs:
           path: merlin-observation-publisher.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
+  build-batch-observation-publisher:
+    runs-on: ubuntu-latest
+    needs:
+      - create-version
+    env:
+      DOCKER_REGISTRY: ghcr.io
+      DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-batch-observation-publisher:${{ needs.create-version.outputs.version }}"
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build Observation Publisher Docker
+        env:
+          BATCH_OBSERVATION_PUBLISHER_IMAGE_TAG: ${{ env.DOCKER_IMAGE_TAG }}
+        run: make batch-observation-publisher
+        working-directory: ./python
+      - name: Save Batch Observation Publisher Docker
+        run: docker image save --output merlin-batch-observation-publisher.${{ needs.create-version.outputs.version }}.tar ${{ env.DOCKER_IMAGE_TAG }}
+      - name: Publish Observation Publisher Docker Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: merlin-batch-observation-publisher.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-batch-observation-publisher.${{ needs.create-version.outputs.version }}.tar
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+
   e2e-test:
     runs-on: ubuntu-latest
     needs:
