feat: reuse the same bigquery table for multiple model versions for Arize BigQuery Sink

--- a/python/observation-publisher/Makefile
+++ b/python/observation-publisher/Makefile
@@ -14,7 +14,12 @@ pip-compile:
 .PHONY: test
 test:
 	@echo "Running tests..."
-	@python -m pytest
+	@python -m pytest -m "not integration"
+
+.PHONY: test-integration
+integration-test:
+	@echo "Running integration tests..."
+	@python -m pytest -m "integration"
 
 .PHONY: run
 run:
