--- a/python/observation-publisher/requirements.in
+++ b/python/observation-publisher/requirements.in
@@ -1,6 +1,6 @@
 confluent-kafka>=2.3.0
 caraml-upi-protos>=1.0.0
-arize==7.7.*
+arize>=7.7.0
 hydra-core>=1.3.0
 pandas>=1.0.0
 google-cloud-bigquery
