fix(cicd): Reduce memory footprint of e2e tests (#534)
# Description
Recently the e2e test job has been
[failing](https://github.com/caraml-dev/merlin/actions/runs/7880641930/job/21503099773)
due to errors in deploying a model version, which would messages such
as:
```
An error occurred (XMinioStorageFull) when calling the PutObject operation: Storage backend has reached its minimum free disk threshold. Please delete a few objects to proceed.
```
Upon digging further, there appears to be a lack of ephemeral storage on
the k3d node we set up in the e2e tests, which causes a deployment's
pods (the transformer usually) to be evicted:
```
The node was low on resource: ephemeral-storage. Threshold quantity: 778512530, available: 748868Ki.
```
Apparently we’ve been encountering this problem for some time already
(@ariefrahmansyah tried to debug and address this in a previous PR
#446), and we already tried some of the workarounds suggested here:
- https://k3d.io/v5.4.6/faq/faq/#pods-evicted-due-to-lack-of-disk-space
- https://github.com/k3d-io/k3d/issues/133

As a quick fix to workaround these issues given that some of the
workarounds have already been implemented, this PR introduces some
changes to the e2e test setup:
- Deleting the model created after each e2e test
- Making the e2e tests (run using pytest) serialised (not
[parallel](https://github.com/caraml-dev/merlin/blob/e110a96763e96333518b53ef6b9c18785fd08fa0/scripts/e2e/run-e2e.sh#L36))
- Using docker system prune instead of just docker image prune
[before](https://github.com/caraml-dev/merlin/blob/e110a96763e96333518b53ef6b9c18785fd08fa0/.github/workflows/merlin.yml#L474)
running the e2e tests
- Lowering of kubelet eviction thresholds even further from 1% to 0.5%


# Modifications
- `.github/workflows/merlin.yml` - Reduction of kubelet eviction
thresholds and replacement of docker image pruning with a system-level
pruning
- `python/sdk/test/integration_test.py` - Addition of ste

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -441,10 +441,10 @@ jobs:
           k3d registry create $LOCAL_REGISTRY --port $LOCAL_REGISTRY_PORT
           k3d cluster create $K3D_CLUSTER --image rancher/k3s:${K3S_VERSION} --port 80:80@loadbalancer \
             --k3s-arg '--disable=traefik,metrics-server@server:*' \
-            --k3s-arg '--kubelet-arg=eviction-hard=imagefs.available<1%,nodefs.available<1%@server:0' \
-            --k3s-arg '--kubelet-arg=eviction-minimum-reclaim=imagefs.available=1%,nodefs.available=1%@server:0' \
-            --k3s-arg '--kubelet-arg=eviction-hard=imagefs.available<1%,nodefs.available<1%@agent:*' \
-            --k3s-arg '--kubelet-arg=eviction-minimum-reclaim=imagefs.available=1%,nodefs.available=1%@agent:*'
+            --k3s-arg '--kubelet-arg=eviction-hard=imagefs.available<0.5%,nodefs.available<0.5%@server:0' \
+            --k3s-arg '--kubelet-arg=eviction-minimum-reclaim=imagefs.available=0.5%,nodefs.available=0.5%@server:0' \
+            --k3s-arg '--kubelet-arg=eviction-hard=imagefs.available<0.5%,nodefs.available<0.5%@agent:*' \
+            --k3s-arg '--kubelet-arg=eviction-minimum-reclaim=imagefs.available=0.5%,nodefs.available=0.5%@agent:*'
       - name: Setup cluster
         working-directory: merlin/scripts/e2e
         run: ./setup-cluster.sh merlin-cluster
@@ -470,8 +470,10 @@ jobs:
       - name: Deploy merlin and mlp
         working-directory: merlin/scripts/e2e
         run: ./deploy-merlin.sh ${{ env.INGRESS_HOST }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ${{ needs.create-version.outputs.version }} ${{ github.ref }} ${{ env.MERLIN_CHART_VERSION }}
-      - name: Prune docker image to make some space
-        run: docker image prune --all --force
+      - name: Prune docker system to make some space
+        run: docker system prune --all --force
+      - name: Print space consumption
+        run: sudo df -h
       - name: Run E2E Test
         timeout-minutes: 30
         id: run-e2e-test
@@ -482,6 +484,11 @@ jobs:
         continue-on-error: true
         working-directory: merlin/scripts/e2e
         run: ./debug-e2e.sh
+      - name: "Print post-e2e test space consumption"
+        if: always()
+        continue-on-error: true
+        working-directory: merlin/scripts/e2e
+        run: sudo df -h
 
   release:
     uses: ./.github/workflows/release.yml
