--- a/python/observation-publisher/requirements.txt
+++ b/python/observation-publisher/requirements.txt
@@ -6,7 +6,7 @@
 #
 -e file:../sdk
     # via -r requirements.in
-alembic==1.13.0
+alembic==1.13.1
     # via mlflow
 annotated-types==0.6.0
     # via pydantic
@@ -14,7 +14,7 @@ antlr4-python3-runtime==4.9.3
     # via
     #   hydra-core
     #   omegaconf
-arize==7.7.2
+arize==7.10.2
     # via -r requirements.in
 arrow==1.3.0
     # via cookiecutter
@@ -22,9 +22,9 @@ binaryornot==0.4.4
     # via cookiecutter
 blinker==1.7.0
     # via flask
-boto3==1.33.11
+boto3==1.34.45
     # via merlin-sdk
-botocore==1.33.11
+botocore==1.34.45
     # via
     #   boto3
     #   s3transfer
@@ -36,7 +36,7 @@ caraml-upi-protos==1.0.0
     # via
     #   -r requirements.in
     #   merlin-sdk
-certifi==2023.11.17
+certifi==2024.2.2
     # via
     #   merlin-sdk
     #   requests
@@ -61,7 +61,7 @@ cookiecutter==2.5.0
     # via merlin-sdk
 databricks-cli==0.18.0
     # via mlflow
-dataclasses-json==0.6.3
+dataclasses-json==0.6.4
     # via merlin-sdk
 docker==6.1.3
     # via
@@ -69,40 +69,40 @@ docker==6.1.3
     #   mlflow
 entrypoints==0.4
     # via mlflow
-flask==2.3.3
+flask==3.0.2
     # via
     #   mlflow
     #   prometheus-flask-exporter
 gitdb==4.0.11
     # via gitpython
-gitpython==3.1.40
+gitpython==3.1.42
     # via
     #   merlin-sdk
     #   mlflow
-google-api-core==2.15.0
+google-api-core==2.17.1
     # via
     #   google-cloud-bigquery
     #   google-cloud-core
     #   google-cloud-storage
-google-auth==2.25.2
+google-auth==2.28.0
     # via
     #   caraml-auth-google
     #   google-api-core
     #   google-cloud-core
     #   google-cloud-storage
-google-cloud-bigquery==3.14.1
+google-cloud-bigquery==3.17.2
     # via -r requirements.in
 google-cloud-core==2.4.1
     # via
     #   google-cloud-bigquery
     #   google-cloud-storage
-google-cloud-storage==2.13.0
+google-cloud-storage==2.14.0
     # via merlin-sdk
 google-crc32c==1.5.0
     # via
     #   google-cloud-storage
     #   google-resumable-media
-google-resumable-media==2.6.0
+google-resumable-media==2.7.0
     # via
     #   google-cloud-bigquery
     #   google-cloud-storage
@@ -111,21 +111,21 @@ googleapis-common-protos==1.62.0
     #   arize
     #   caraml-upi-protos
     #   google-api-core
-grpcio==1.60.0
+grpcio==1.60.1
     # via grpcio-tools
-grpcio-tools==1.60.0
+grpcio-tools==1.60.1
     # via caraml-upi-protos
-gunicorn==20.1.0
+gunicorn==21.2.0
     # via mlflow
 hydra-core==1.3.2
     # via -r requirements.in
 idna==3.6
     # via requests
-importlib-metadata==5.2.0
+importlib-metadata==7.0.1
     # via mlflow
 itsdangerous==2.1.2
     # via flask
-jinja2==3.1.2
+jinja2==3.1.3
     # via
     #   cookiecutter
     #   flask
@@ -133,16 +133,16 @@ jmespath==1.0.1
     # via
     #   boto3
     #   botocore
-mako==1.3.0
+mako==1.3.2
     # via alembic
 markdown-it-py==3.0.0
     # via rich
-markupsafe==2.1.3
+markupsafe==2.1.5
     # via
     #   jinja2
     #   mako
     #   werkzeug
-marshmallow==3.20.1
+marshmallow==3.20.2
     # via dataclasses-json
 mdurl==0.1.2
     # via markdown-it-py
@@ -161,25 +161,26 @@ oauthlib==3.2.2
     # via databricks-cli
 omegaconf==2.3.0
     # via hydra-core
-packaging==21.3
+packaging==23.2
     # via
     #   docker
     #   google-cloud-bigquery
+    #   gunicorn
     #   hydra-core
     #   marshmallow
     #   mlflow
-pandas==1.5.3
+pandas==2.2.0
     # via
     #   -r requirements.in
     #   arize
     #   mlflow
-prometheus-client==0.19.0
+prometheus-client==0.20.0
     # via
     #   -r requirements.in
     #   prometheus-flask-exporter
 prometheus-flask-exporter==0.23.0
     # via mlflow
-protobuf==4.25.1
+protobuf==4.25.3
     # via
     #   arize
     #   google-api-core
@@ -187,7 +188,7 @@ protobuf==4.25.1
     #   grpcio-tools
     #   merlin-sdk
     #   mlflow
-pyarrow==14.0.1
+pyarrow==15.0.0
     # via arize
 pyasn1==0.5.1
     # via
@@ -203,8 +204,6 @@ pygments==2.17.2
     # via rich
 pyjwt==2.8.0
     # via databricks-cli
-pyparsing==3.1.1
-    # via packaging
 pyprind==2.11.3
     # via merlin-sdk
 python-dateutil==2.8.2
@@ -214,9 +213,9 @@ python-dateutil==2.8.2
     #   google-cloud-bigquery
     #   merlin-sdk
     #   pandas
-python-slugify==8.0.1
+python-slugify==8.0.4
     # via cookiecutter
-pytz==2022.7.1
+pytz==2024.1
     # via
     #   mlflow
     #   pandas
@@ -244,9 +243,9 @@ rich==13.7.0
     # via cookiecutter
 rsa==4.9
     # via google-auth
-s3transfer==0.8.2
+s3transfer==0.10.0
     # via boto3
-scipy==1.11.4
+scipy==1.12.0
     # via mlflow
 six==1.16.0
     # via
@@ -256,7 +255,7 @@ six==1.16.0
     #   querystring-parser
 smmap==5.0.1
     # via gitdb
-sqlalchemy==1.4.50
+sqlalchemy==2.0.27
     # via
     #   alembic
     #   mlflow
@@ -266,9 +265,9 @@ tabulate==0.9.0
     # via databricks-cli
 text-unidecode==1.3
     # via python-slugify
-tqdm==4.66.1
+tqdm==4.66.2
     # via arize
-types-python-dateutil==2.8.19.14
+types-python-dateutil==2.8.19.20240106
     # via arrow
 typing-extensions==4.9.0
     # via
@@ -276,9 +275,12 @@ typing-extensions==4.9.0
     #   alembic
     #   pydantic
     #   pydantic-core
+    #   sqlalchemy
     #   typing-inspect
 typing-inspect==0.9.0
     # via dataclasses-json
+tzdata==2024.1
+    # via pandas
 urllib3==2.0.7
     # via
     #   botocore
