--- a/python/observation-publisher/conf/environment/example-override.yaml
+++ b/python/observation-publisher/conf/environment/example-override.yaml
@@ -7,7 +7,7 @@ inference_schema:
   model_prediction_output:
     output_class: "BinaryClassificationOutput"
     prediction_score_column: "score"
-    actual_label_column: "actual_label"
+    actual_score_column: "actual_score"
     positive_class_label: "positive"
     negative_class_label: "negative"
     score_threshold: 0.5
