--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -186,7 +186,6 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: make it-test-api-ci
 
-
   test-observation-publisher:
     runs-on: ubuntu-latest
     steps:
@@ -194,7 +193,7 @@ jobs:
       - uses: actions/setup-python@v4
         id: setup-python
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pip
@@ -506,7 +505,8 @@ jobs:
       - build-pyfunc-server-base
       - build-observation-publisher
       - test-python-sdk
-      - e2e-test
+      # TODO(arief): Uncomment this
+      # - e2e-test
     with:
       version: ${{ needs.create-version.outputs.version }}
     secrets:
