--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,14 +53,14 @@ jobs:
         working-directory: ./python/pyfunc-server
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+          pip install setuptools setuptools_scm wheel twine
       - name: Build and publish
         env:
           TWINE_USERNAME: ${{ secrets.pypi_username }}
           TWINE_PASSWORD: ${{ secrets.pypi_password }}
         working-directory: ./python/pyfunc-server
         run: |
-          tag=$(git describe --tags --always --first-parent)
+          tag=$(python -m setuptools_scm -r ../..)
           sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag//v}"`\"|g" ./pyfuncserver/version.py
           python setup.py sdist bdist_wheel
           twine upload dist/*
