Use sed to remove hash from setuptools_scm output

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.pypi_password }}
         working-directory: ./python/pyfunc-server
         run: |
-          tag=$(python -m setuptools_scm -r ../..)
+          tag=$(python -m setuptools_scm -r ../.. | sed 's/\+.*//')
           echo $tag
           sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag}"`\"|g" ./pyfuncserver/version.py
           python setup.py sdist bdist_wheel
