--- a/scripts/e2e/values-e2e.yaml
+++ b/scripts/e2e/values-e2e.yaml
@@ -26,6 +26,8 @@ config:
   AuthorizationConfig:
     AuthorizationEnabled: false
   ObservabilityPublisher:
+    TargetNamespace: caraml-mlobs
+    EnvironmentName: dev
     KafkaConsumer:
       Brokers: broker-sample:6666
     DefaultResources:
