--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,8 +61,32 @@ jobs:
         working-directory: ./python/pyfunc-server
         run: |
           tag=$(python -m setuptools_scm -r ../.. | sed 's/\+.*//')
-          echo $tag
           sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag}"`\"|g" ./pyfuncserver/version.py
+          python setup.py sdist bdist_wheel
+          twine upload dist/*
+
+  publish-merlin-pyspark-app:
+    # if: ${{ startsWith(github.ref, 'refs/tags/') }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.8
+          cache: pip
+      - name: Install dependencies
+        working-directory: ./python/batch-predictor
+        run: pip install setuptools>=64 setuptools_scm>=8 twine wheel
+      - name: Build and publish
+        env:
+          TWINE_USERNAME: ${{ secrets.pypi_username }}
+          TWINE_PASSWORD: ${{ secrets.pypi_password }}
+        working-directory: ./python/batch-predictor
+        run: |
+          tag=$(python -m setuptools_scm -r ../.. | sed 's/\+.*//')
+          sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag}"`\"|g" ./version.py
           python setup.py sdist bdist_wheel
           twine upload dist/*
 
