--- a/python/batch-predictor/requirements.txt
+++ b/python/batch-predictor/requirements.txt
@@ -1,6 +1,6 @@
-findspark
-pyspark==3.0.1
-mlflow==1.26.1
 cloudpickle==2.0.0
+findspark==2.0.1
+merlin-sdk==0.40.1
+mlflow==1.26.1
 pyarrow>=0.14.1,<=9.0.0
-file:${SDK_PATH}#egg=merlin-sdk
+pyspark==3.0.1
