--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
           python setup.py sdist bdist_wheel
           twine upload dist/*
 
-  publish-merlin-pyspark-app:
+  publish-merlin-batch-predictor:
     # if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
@@ -86,7 +86,7 @@ jobs:
         working-directory: ./python/batch-predictor
         run: |
           tag=$(python -m setuptools_scm -r ../.. | sed 's/\+.*//')
-          sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag}"`\"|g" ./version.py
+          sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag}"`\"|g" ./merlinpyspark/version.py
           python setup.py sdist bdist_wheel
           twine upload dist/*
 
