--- a/python/batch-predictor/test-model/conda.yaml
+++ b/python/batch-predictor/test-model/conda.yaml
@@ -1,4 +1,10 @@
 dependencies:
+- python=3.8.*
 - pip:
+  - mlflow
   - scikit-learn>=1.1.2
-  - joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
+  - joblib>=0.13.0,<1.2.0
+  - numpy>=1.19.5,<1.23.4
+  - pandas==1.3.5
+  - pytest
+  - pytest-xdist
