--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,8 +41,7 @@ jobs:
           twine upload dist/*
 
   publish-merlin-pyfunc-server:
-    # TODO(arief): Uncomment this once testing complete
-    # if: ${{ startsWith(github.ref, 'refs/tags/') }}
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -67,8 +66,7 @@ jobs:
           twine upload dist/*
 
   publish-merlin-batch-predictor:
-    # TODO(arief): Uncomment this once testing complete
-    # if: ${{ startsWith(github.ref, 'refs/tags/') }}
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
